<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cvNewsItem"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    card_view:cardCornerRadius="4dp">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/llTitleAndDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:orientation="vertical"
            android:paddingTop="8dp">

            <TextView
                android:id="@+id/tvNewsTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/title"
                android:textColor="@color/Black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/_pubDate"
                    style="@style/dateCardStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/date" />

                <TextView
                    android:id="@+id/pubDate"
                    style="@style/dateCardStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="3dp"
                    android:text="@string/date" />
            </LinearLayout>
        </LinearLayout>


        <RelativeLayout
            android:id="@+id/rlMainImg"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_below="@+id/llTitleAndDate">

            <ImageView
                android:id="@+id/imgNewsPic"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:scaleType="centerCrop"
                android:src="@drawable/derbi_default_img" />

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/llDescAndSocial"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rlMainImg"
            android:layout_margin="5dp"
            android:orientation="vertical"
            android:paddingBottom="5dp"
            android:paddingTop="5dp">

            <TextView
                android:id="@+id/descNews"
                style="@style/mainDescCardStyle"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/testString" />

            <LinearLayout
                android:id="@+id/llSocialAndMore"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="5dp"
                android:paddingTop="5dp">

                <TextView
                    android:id="@+id/shareNews"
                    style="@style/moreCardStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/share" />

                <ImageView
                    android:id="@+id/icnFacebook"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:src="@drawable/f_facebook_bl" />

                <ImageView
                    android:id="@+id/icnTwitter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:src="@drawable/f_twitter_bl" />

                <ImageView
                    android:id="@+id/icnUrl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:src="@drawable/f_link_bl" />

                <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="20dp">

                    <ImageView
                        android:id="@+id/icnMore"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:padding="5dp"
                        android:src="@drawable/ic_arrow_forward" />


                    <TextView
                        android:id="@+id/moreNews"
                        style="@style/moreCardStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:layout_toLeftOf="@+id/icnMore"
                        android:gravity="center_horizontal"
                        android:text="@string/more" />

                </RelativeLayout>
            </LinearLayout>
        </LinearLayout>

    </RelativeLayout>
</android.support.v7.widget.CardView>