<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:bootstrapbutton="http://schemas.android.com/apk/res-auto"
    xmlns:bootstrap="http://schemas.android.com/apk/res-auto"
    xmlns:card="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/White" >

    <RelativeLayout
        android:id="@+id/mainLL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/llBottom_"
        android:layout_gravity="center_horizontal"
        android:layout_alignParentTop="true" >

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/White"
            android:id="@+id/frameScrollLayuot"

            >
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:paddingBottom="5dp"
                    android:paddingLeft="20dp"
                    android:paddingTop="10dp"
                    >

                    <TextView
                        android:id="@+id/osnovach"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingBottom="10dp"
                        android:text="@string/osnovach"
                        android:textColor="@color/derbiBlue"
                        android:textSize="20sp" />

                    <com.beardedhen.androidbootstrap.BootstrapCircleThumbnail
                        android:id="@+id/thumbTabak"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/osnovach"
                        card:bct_image="@drawable/ic_user"
                        card:bct_size="medium" />

                    <TextView
                        android:id="@+id/osnovachIme"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignTop="@+id/thumbTabak"
                        android:layout_marginTop="22dp"
                        android:layout_toRightOf="@+id/osnovach"
                        android:paddingBottom="10dp"
                        android:text="@string/tabak"
                        android:textColor="@color/derbiPrimaryGray"
                        android:textSize="18sp" />
                </RelativeLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_gravity="center_horizontal"
                    android:paddingLeft="20dp"
                    android:paddingTop="10dp" >

                    <TextView
                        android:id="@+id/redakcija"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingBottom="10dp"
                        android:text="@string/redakcija"
                        android:textColor="@color/derbiBlue"
                        android:textSize="20sp" />
                </LinearLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <RelativeLayout
                        android:id="@+id/relativeLayout1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_gravity="center_horizontal"
                        android:paddingBottom="10dp"
                        android:paddingLeft="20dp"
                        android:paddingTop="5dp" >

                        <com.beardedhen.androidbootstrap.BootstrapCircleThumbnail
                            android:id="@+id/redak1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingTop="10dp"
                            bootstrap:bct_image="@drawable/ic_user"
                            bootstrap:bct_size="small" />

                        <TextView
                            android:id="@+id/redakIme1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignBottom="@+id/redak1"
                            android:layout_marginLeft="18dp"
                            android:layout_toRightOf="@+id/redak1"
                            android:paddingBottom="10dp"
                            android:text="@string/blashko"
                            android:textColor="@color/derbiPrimaryGray"
                            android:textSize="12sp" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentTop="true"
                        android:layout_marginRight="36dp"
                        android:paddingBottom="10dp"
                        android:paddingTop="5dp" >

                        <com.beardedhen.androidbootstrap.BootstrapCircleThumbnail
                            android:id="@+id/redak2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingTop="10dp"
                            card:bct_image="@drawable/ic_user"
                            card:bct_size="small" >
                        </com.beardedhen.androidbootstrap.BootstrapCircleThumbnail>

                        <TextView
                            android:id="@+id/redakIme2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignBottom="@+id/redak2"
                            android:layout_marginLeft="18dp"
                            android:layout_toRightOf="@+id/redak2"
                            android:paddingBottom="10dp"
                            android:text="@string/alek"
                            android:textColor="@color/derbiPrimaryGray"
                            android:textSize="12sp" />
                    </RelativeLayout>

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingBottom="10dp"
                        android:paddingLeft="20dp"
                        android:paddingTop="10dp" >

                        <com.beardedhen.androidbootstrap.BootstrapCircleThumbnail
                            android:id="@+id/redak3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingTop="10dp"
                            bootstrap:bct_image="@drawable/ic_user"
                            bootstrap:bct_size="small" />

                        <TextView
                            android:id="@+id/redakIme3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignBottom="@+id/redak3"
                            android:layout_marginLeft="12dp"
                            android:layout_toRightOf="@+id/redak3"
                            android:paddingBottom="10dp"
                            android:text="@string/filip"
                            android:textColor="@color/derbiPrimaryGray"
                            android:textSize="12sp" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentTop="true"
                        android:layout_marginRight="42dp"
                        android:paddingBottom="10dp"
                        android:paddingTop="10dp" >

                        <com.beardedhen.androidbootstrap.BootstrapCircleThumbnail
                            android:id="@+id/redak4"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingTop="10dp"
                            card:bct_image="@drawable/ic_user"
                            card:bct_size="small" >
                        </com.beardedhen.androidbootstrap.BootstrapCircleThumbnail>

                        <TextView
                            android:id="@+id/redakIme4"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignBottom="@+id/redak4"
                            android:layout_marginLeft="12dp"
                            android:layout_toRightOf="@+id/redak4"
                            android:paddingBottom="10dp"
                            android:text="@string/toni"
                            android:textColor="@color/derbiPrimaryGray"
                            android:textSize="12sp" />
                    </RelativeLayout>

                </RelativeLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingBottom="10dp"
                        android:paddingLeft="20dp"
                        android:paddingTop="5dp" >



                        <com.beardedhen.androidbootstrap.BootstrapCircleThumbnail
                            android:id="@+id/redak5"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingTop="10dp"
                            bootstrap:bct_image="@drawable/ic_user"
                            bootstrap:bct_size="small" />

                        <TextView
                            android:id="@+id/redakIme5"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignBottom="@+id/redak5"
                            android:layout_marginLeft="12dp"
                            android:layout_toRightOf="@+id/redak5"
                            android:paddingBottom="10dp"
                            android:text="@string/dimitar"
                            android:textColor="@color/derbiPrimaryGray"
                            android:textSize="12sp" />
                    </RelativeLayout>


                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_gravity="center_horizontal"
                    android:paddingLeft="20dp"
                    android:paddingTop="10dp" >

                    <TextView
                        android:id="@+id/file"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingBottom="10dp"
                        android:text="@string/kolumnist"
                        android:textColor="@color/derbiBlue"
                        android:textSize="20sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingBottom="10dp"
                        android:paddingLeft="20dp"
                        android:paddingTop="5dp" >



                        <com.beardedhen.androidbootstrap.BootstrapCircleThumbnail
                            android:id="@+id/redak6"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingTop="10dp"
                            bootstrap:bct_image="@drawable/ic_user"
                            bootstrap:bct_size="small" />

                        <TextView
                            android:id="@+id/redakIme6"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignBottom="@+id/redak6"
                            android:layout_marginLeft="12dp"
                            android:layout_toRightOf="@+id/redak6"
                            android:paddingBottom="10dp"
                            android:text="@string/fileT"
                            android:textColor="@color/derbiPrimaryGray"
                            android:textSize="12sp" />
                    </RelativeLayout>


                </LinearLayout>

            </LinearLayout>
        </ScrollView>
    </RelativeLayout>
    <LinearLayout
        android:id="@+id/llBottom_"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/White" >

        <com.beardedhen.androidbootstrap.BootstrapButton
            android:id="@+id/bbDerbiFacebook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:paddingRight="2dp"
            android:text="@string/facebookDerbi"
            bootstrapbutton:bb_icon_left="fa-facebook"
            card:bb_size="default"
            card:bb_type="primary" />

        <com.beardedhen.androidbootstrap.BootstrapButton
            android:id="@+id/bbDerbiTwitter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/twitterDerbi"
            card:bb_size="default"
            bootstrapbutton:bb_icon_left="fa-twitter"
            card:bb_type="info" />
    </LinearLayout>
</RelativeLayout>